--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background: white;
+            margin: 0;
+            padding: 0;
+        }
+
+        * {
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
 </head>
 <body>
-    
+    <center>
+        <h1>possum CS</h1>
+        <p>Possum CS is a secure and customizable credential system built from scratch using Python. It aims to provide a simple, yet effective way to manage user authentication and authorization, supporting various types of credentials, including usernames, passwords, and other authentication methods.</p>
+        <p>This project was developed with security best practices in mind to ensure data protection and user privacy.</p>
+        <br><br><h3>features</h3><br><br>
+        <p>Key system, and email & password authentication.</p>
+        <p>stable and secure.</p>
+        <p>secure, stable, and strong api</p>
+    </center>
 </body>
 </html>
